@@ -21,7 +21,6 @@ Next steps:
 * `Visit the Nikola website to learn more <https://getnikola.com>`__
 * `See a demo photo gallery <link://gallery/demo>`__
 * :doc:`See a demo listing <listings-demo>`
-* :doc:`See a demo slideshow <slides-demo>`
 * :doc:`See a demo of a longer text <dr-nikolas-vendetta>`
 
 Send feedback to info@getnikola.com!
