@@ -1,14 +1,0 @@
-[Core]
-name = rest_slides
-module = slides
-
-[Nikola]
-compiler = rest
-PluginCategory = CompilerExtension
-
-[Documentation]
-author = Roberto Alsina
-version = 0.1
-website = https://getnikola.com/
-description = Slides directive
-
